<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.ActivityThemKH"
    android:padding="30dp">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/nhapMaKH"
            style="@style/txtTextStyle"
            android:hint="@string/hintMaKH"
            android:autofillHints="@string/hintMaKH" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/nhapTenKH"
            style="@style/txtTextStyle"
            android:hint="@string/hintTenKH"
            android:autofillHints="@string/hintTenKH" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/nhapDiaChi"
            style="@style/txtTextStyle"
            android:hint="@string/hintDiaChi"
            android:autofillHints="@string/hintDiaChi" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/nhapSoDT"
            style="@style/txtNumberStyle"
            android:hint="@string/hintSoDT"
            android:autofillHints="@string/hintSoDT" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:background="@drawable/them"
        android:id="@+id/add_button_kh"
        style="@style/btnStyle"
        android:text="@string/btnThem"/>
</LinearLayout>