<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.ActivitySuaDH"
    android:padding="30dp">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/suaMaDH"
            style="@style/txtTextStyle"
            android:hint="@string/hintMaDH"
            android:autofillHints="@string/hintMaDH" />
    </com.google.android.material.textfield.TextInputLayout>
    <Spinner
        android:id="@+id/suaSpinnerMaKH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:entries="@array/hintArrayMaKH"
        android:layout_gravity="center_horizontal"/>
    <Spinner
        android:id="@+id/suaSpinnerMaSP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:entries="@array/hintArrayMaSP"
        android:layout_gravity="center_horizontal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/suaSoLuongSP"
            style="@style/txtNumberStyle"
            android:hint="@string/hintSoLuongSP"
            android:autofillHints="@string/hintSoLuongSP" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/suaNgayTaoDH"
            style="@style/txtTextStyle"
            android:hint="@string/hintNgayTaoDH"
            android:autofillHints="@string/hintNgayTaoDH" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/suaSpinnerTinhTrangDH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:entries="@array/hintArrayTinhTrangDH"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/save_button_dh"
        android:background="@drawable/them"
        style="@style/btnStyle"
        android:text="@string/btnLuu"/>

    <Button
        android:id="@+id/delete_button_dh"
        android:background="@drawable/them"
        style="@style/btnStyle"
        android:text="@string/btnXoa"
        android:textColor="@color/red"/>
</LinearLayout>