<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/recyclerViewItemLayoutKH">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewKH"
        style="@style/cardView">
        <LinearLayout
            style="@style/ItemListStyle">
            <TextView
                android:id="@+id/tvRecyclerViewIDKH"
                style="@style/tvRecyclerViewIDKH"
                android:text="@string/tvID" />
            <ImageView
                android:id="@+id/imgRecyclerViewIDKH"
                style="@style/imgID" />

            <LinearLayout
                style="@style/ItemListStyleInformation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/tvNotBold"
                        android:text="@string/hintMaKH"/>
                    <TextView
                        android:id="@+id/tvMaKH"
                        style="@style/tvBold"
                        android:text="@string/hintMaKH" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/tvNotBold"
                        android:text="@string/hintTenKH"/>
                    <TextView
                        android:id="@+id/tvTenKH"
                        style="@style/tvBold"
                        android:text="@string/hintTenKH" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/tvNotBold"
                        android:text="@string/hintDiaChi"/>
                    <TextView
                        android:id="@+id/tvDiaChi"
                        style="@style/tvBold"
                        android:text="@string/hintDiaChi" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/tvNotBold"
                        android:text="@string/hintSoDT"/>
                    <TextView
                        android:id="@+id/tvSoDT"
                        style="@style/tvBold"
                        android:text="@string/hintSoDT" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>